@@ -1,17 +1,21 @@
-# $NetBSD: Makefile,v 1.9 2004/03/10 18:25:25 wiz Exp $
+# $NetBSD: Makefile,v 1.10 2004/03/26 02:27:40 wiz Exp $
 #
 
-DISTNAME=	grhino-0.9.0
-PKGREVISION=	1
+DISTNAME=	grhino-0.11.0
 CATEGORIES=	games
-MASTER_SITES=	http://ftp1.sourceforge.net/rhino/
+MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=rhino/}
 
 MAINTAINER=	tech-pkg@NetBSD.org
 HOMEPAGE=	http://rhino.sourceforge.net/
 COMMENT=	Othello (Reversi) engine
 
-USE_BUILDLINK3=	YES
-GNU_CONFIGURE=	YES
+USE_BUILDLINK3=		yes
+GNU_CONFIGURE=		yes
+USE_DIRS+=		gnome2-1.5
+USE_PKGLOCALEDIR=	yes
 
 .include "../../devel/libgnomeui/buildlink3.mk"
+.include "../../devel/pkgconfig/buildlink3.mk"
+.include "../../textproc/scrollkeeper/omf.mk"
+.include "../../mk/pthread.buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
